Added Toast and Changes in Ui

--- a/VoipApplicationProject/Views/BalanceCustomer/AddBalance.cshtml
+++ b/VoipApplicationProject/Views/BalanceCustomer/AddBalance.cshtml
@@ -6,30 +6,24 @@
 }
 <h1 style="text-align:center">Add Funds to your Motele.com account instantly  </h1>
 <h4 style="text-align:center">Select an amount to add to your account</h4>
-<div class="form-group row"style="text-align:center">
+<div class="form-group row" style="text-align:center">
     <div class="col-md-2">
-        @Html.CheckBox("$50", false)
-        <label class="mx-2">$50</label>
+        <input name="18+" value="yes" id="18" type="radio">$50
     </div>
     <div class="col-md-2">
-        @Html.CheckBox("$100", false)
-        <label >$100</label>
+        <input name="18+" value="yes" id="18" type="radio">$100
     </div>
     <div class="col-md-2">
-        @Html.CheckBox("$150", false)
-        <label >$150</label>
+        <input name="18+" value="yes" id="18" type="radio">$150
     </div>
     <div class="col-md-2">
-        @Html.CheckBox("$200", false)
-        <label >$200</label>
+        <input name="18+" value="yes" id="18" type="radio">$200
     </div>
     <div class="col-md-2">
-        @Html.CheckBox("$250", false)
-        <label>$250</label>
+        <input name="18+" value="yes" id="18" type="radio">$250
     </div>
     <div class="col-md-2">
-        @Html.CheckBox("$300", false)
-        <label >$300</label>
+        <input name="18+" value="yes" id="18" type="radio">$300
     </div>
 </div>
 <h4 style="text-align:center">OR</h4>
@@ -37,5 +31,5 @@
 <div style="text-align:center">
     <input placeholder="ENTER AMOUNT($)">
     <br><br>
-    <button type="submit" class="btn btn-dark" style="background-color:blue" asp-area="" asp-controller="Home" asp-action="Index">GENERATE PAYMENT LINK</button>
+    <button type="submit" class="btn btn-primary">GENERATE PAYMENT LINK</button>
 </div>
