--- a/VoipApplicationProject/Views/Customer/ForgotPassword.cshtml
+++ b/VoipApplicationProject/Views/Customer/ForgotPassword.cshtml
@@ -4,21 +4,41 @@
     ViewData["Title"] = "ForgotPassword";
 }
 
-<div class="col-md-4 mx-auto">
+<div class="col-md-4 mx-auto ">
     <h3 class="text-center">First. let's find your account</h3>
     <div class="text-center"><label>Please enter your email ID</label></div>
     <form asp-action="ForgotPassword">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            <input asp-for="Email" class="form-control" placeholder="Enter your Email*"/>
+            <input asp-for="Email" class="form-control" placeholder="Enter your Email*" />
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
-        <div class="form-group text-center">
+        <div class="form-group text-center ">
             <a href="Login" class="btn btn-light border">Cancel</a>
-            <input type="submit" value="Find Account" class="btn btn-primary" />
+            <input type="submit" value="Find Account" class="btn btn-primary " id="myBtn" />
         </div>
     </form>
 </div>
+<div class="toast" id="t1" data-autohide="false" style="margin-left:1000px;margin-top:-200px">
+    <div class="toast-header">
+        <strong class="mr-auto text-primary">Success</strong>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">&times;</button>
+    </div>
+    <div class="toast-body">
+        Reset password URL has been sent to the email successfully!
+    </div>
+</div>
+<div class="toast"id="tt"  data-autohide="false" style="margin-left:1000px;margin-top:-100px">
+    <div class="toast-header">
+        <strong class="mr-auto text-primary">Failed</strong>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">&times;</button>
+    </div>
+    <div class="toast-body">
+        Your email doesn't exist. Please try again with valid email.
+    </div>
+</div>
+
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
@@ -27,10 +47,15 @@
 {
     if (ViewBag.ShowAlert == "success")
     {
-        <script>alert("Reset password URL has been sent to the email successfully!");</script>
+        <script>
+            $("#t1").toast('show');
+        </script>
     }
     else
     {
-        <script>alert("Your email doesn't exist. Please try again with valid email.");</script>
+        <script>
+            $("#tt").toast('show');
+        </script>
     }
+
 }
