--- a/VoipApplicationProject/Views/Customer/ResetPassword.cshtml
+++ b/VoipApplicationProject/Views/Customer/ResetPassword.cshtml
@@ -24,19 +24,22 @@
                 <input asp-for="ConfirmPassword" class="form-control" placeholder="Confirm Password*" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group toast-header" id="toast">
                 <input type="submit" value="Submit" class="btn btn-primary" />
             </div>
         </div>
     </form>
 </div>
-@if (!String.IsNullOrEmpty(ViewBag.ShowAlert))
+<script>$(document).ready(function () {
+        $('#toast').toast('show');
+    });</script>
+@*@if (!String.IsNullOrEmpty(ViewBag.ShowAlert))
 {
     if (ViewBag.ShowAlert == "failed")
     {
         <script>alert("Reset password failed. Please try again!");</script>
     }
-}
+}*@
 <script src="/lib/jquery/dist/jquery.min.js"></script>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
