--- a/VoipApplicationProject/Views/Customer/Billing.cshtml
+++ b/VoipApplicationProject/Views/Customer/Billing.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-md-3">
-        <button type="submit" class="btn btn-primary btn-block" asp-area="" asp-controller="Home" asp-action="Index">REQUEST FOR TRAIL BALANCE</a></button>
+        <button type="submit" class="btn btn-primary btn-block">REQUEST FOR TRAIL BALANCE</button>
     </div>
     <div class="col-md-3">
         <button type="submit" class="btn btn-primary btn-block" onclick="@("window.location.href='" + @Url.Action("AddBalance", "BalanceCustomer") + "'");">ADD BALANCE </button>
@@ -78,7 +78,7 @@
                         <label><a href="#" style="color: black; text-align: center" data-toggle="modal" data-target="#BuyPhone">Buy Phone Number</a></label>
                     </div>
                     <div class="col-md-2" style="margin-left: 10px; height: 100px; border: 2px solid black; background-color: darkred">
-                        <label><a href="#" style="color: black; text-align: center" data-toggle="modal" data-target="#BuySub">Buy Sub User</a></label>
+                        <label><a href="#" style="color: black; text-align: center" data-toggle="modal" data-target="#BuyUser">Buy Sub User</a></label>
                     </div>
                     <div class="col-md-2" style="margin-left: 10px; height: 100px; border: 2px solid black; background-color: yellowgreen">
                         <label><a href="#" style="color:black;text-align:center" data-toggle="modal" data-target="#Buy">Buy Storage Space Time</a></label>
@@ -90,7 +90,7 @@
     </div>
 </div>
 <div style="margin-left:70%">
-    <button type="submit" class="btn btn-dark " style="background-color:blue" asp-area="" asp-controller="Home" asp-action="Index">EXPORT TO EXCEL</button>
+    <button type="submit" class="btn btn-primary">EXPORT TO EXCEL</button>
 </div>
 
 <div class="modal fade " id="BuyMinute" tabindex="-1" role="dialog">
@@ -132,10 +132,10 @@
                 </div>
                 <div class="row">
                     <div style="margin-left:25%;margin-top:10px">
-                        <button style="background-color: blue" type="button" data-toggle="modal" data-target="#Confirm">BUY</button>
+                        <button class="btn btn-primary" type="button" data-toggle="modal" data-target="#Confirm">BUY</button>
                     </div>
                     <div style="margin-left:5%;margin-top:10px">
-                        <button style="background-color: blue" type="button" data-dismiss="modal">Close</button>
+                        <button class="btn btn-primary" type="button" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
@@ -226,6 +226,87 @@
     </div>
 </div>
 
+<div class="modal fade " id="BuyMinute" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header" style="text-align:center">
+                <h6>Buy Country Wise Minutes</h6>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" style="margin:0 30% 0 30%">
+                <div class="row">
+                    <label>Select Country: </label>
+                    <div style="position:relative;width:200px;height:25px;padding:0;margin-left:10px;">
+                        <select style="position:absolute;top:0px;left:0px;width:200px; height:25px;line-height:20px;margin:0;padding:0;"
+                                onchange="document.getElementById('displayValue').value=this.options[this.selectedIndex].text; document.getElementById('idValue').value=this.options[this.selectedIndex].value;">
+
+                            <option>England</option>
+                            <option>India</option>
+                            <option>Dubai  </option>
+                        </select>
+                    </div>
+                </div>
+                <div class="row">
+                    <label>Select Package: </label>
+                    <div style="position:relative;width:200px;height:25px;padding:0;margin-left:10px;">
+                        <select style="position:absolute;top:0px;left:0px;width:200px; height:25px;line-height:20px;margin:0;padding:0;"
+                                onchange="document.getElementById('displayValue').value=this.options[this.selectedIndex].text; document.getElementById('idValue').value=this.options[this.selectedIndex].value;">
+                            <option>Package 1</option>
+                            <option>Package 2</option>
+                            <option>Package 3</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="row">
+                    <label>Amount To Pay: </label>
+                    <input style="margin-left:10px;" placeholder="Enter the Amount($)">
+                </div>
+                <div class="row">
+                    <div style="margin-left:25%;margin-top:10px">
+                        <button class="btn btn-primary" type="button" data-toggle="modal" data-target="#Confirm">BUY</button>
+                    </div>
+                    <div style="margin-left:5%;margin-top:10px">
+                        <button class="btn btn-primary" type="button" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade " id="BuyUser" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header" style="text-align:center">
+                <h6>Buy Sub User</h6>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" style="margin:0 30% 0 30%">
+                <div class="row">
+                    <label>Enter Number of Sub users: </label>
+                    <input style="margin-left:10px;">
+                </div>
+                <div class="row">
+                    <label>Amount To Pay: </label>
+                    <input style="margin-left:10px;margin-top:10px" placeholder="Enter the Amount($)">
+                </div>
+                <div class="row">
+                    <div style="margin-left:25%;margin-top:10px">
+                        <button class="btn btn-primary" type="button" data-toggle="modal" data-target="#Confirm">BUY</button>
+                    </div>
+                    <div style="margin-left:5%;margin-top:10px">
+                        <button class="btn btn-primary" type="button" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>    
+
 <div class="modal fade" id="Confirm" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -247,4 +328,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> 
