--- a/VoipApplicationProject/Views/Customer/Login.cshtml
+++ b/VoipApplicationProject/Views/Customer/Login.cshtml
@@ -5,64 +5,64 @@
     var custTypeList = Enum.GetValues(typeof(VoipApplicationProject.Models.CustomerType));
 }
 
-<div class="col-md-10 mx-auto">
-    <div class="row">
-        <div class="col-md-6"></div>
-        <div class="col-md-6">
-            <h4 class="text-center">Welcome Back</h4>
-            <div class="text-center"><small class="mb-3">Don't miss your next opportunity. Sign in to stay updated.</small></div>
-            <form asp-action="Login">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="col-md-10" style="margin-left:-150px;margin-top:10px">
+        <div class="row">
+            <div class="col-md-6"></div>
+            <div class="col-md-6">
+                <h4 class="text-center">Welcome Back</h4>
+                <div class="text-center" style="font-size:20px"><small class="mb-3">Don't miss your next opportunity. Sign in to stay updated.</small></div>
+                <form asp-action="Login">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                <div class="row mt-3">
-                    <div class="col-md-4 text-md-left text-center"><label>Select User Type</label></div>
-                    <div class="col-md-8 text-md-left text-center">
-                        @foreach (var value in custTypeList)
-                        {
-                            <div class="form-check form-check-inline">
-                                @Html.RadioButtonFor(Model => Model.CustomerTypeID, value)
-                                <label class="mx-2 mb-0">@value.ToString()</label>
-                            </div>
-                        }
+                    <div class="row mt-3">
+                        <div class="col-md-4 text-md-left text-center"><label>Select User Type</label></div>
+                        <div class="col-md-8 text-md-left text-center">
+                            @foreach (var value in custTypeList)
+                            {
+                                <div class="form-check form-check-inline">
+                                    @Html.RadioButtonFor(Model => Model.CustomerTypeID, value)
+                                    <label class="mx-2 mb-0">@value.ToString()</label>
+                                </div>
+                            }
+                        </div>
                     </div>
-                </div>
-                <br />
-                <span asp-validation-for="CustomerTypeID" class="text-danger"></span>
+                    <br />
+                    <span asp-validation-for="CustomerTypeID" class="text-danger"></span>
 
-                <div class="form-group mt-3">
-                    <input asp-for="Email" class="form-control" placeholder="Username*" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <input asp-for="Password" class="form-control" placeholder="Password*" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-                <div class="form-group row">
-                    <div class="col-6">
-                        @Html.CheckBox("ChkRememberMe", false)
-                        <label class="mx-2">Remember Me</label>
+                    <div class="form-group mt-3">
+                        <input asp-for="Email" class="form-control" placeholder="Username*" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
-                    <div class="col-6 text-right">
-                        <a href="ForgotPassword">Forgot Password ?</a>
+                    <div class="form-group">
+                        <input asp-for="Password" class="form-control" placeholder="Password*" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-4 mx-auto">
-                        <input type="submit" value="Login" class="btn btn-primary btn-block" />
+                    <div class="form-group row">
+                        <div class="col-6">
+                            @Html.CheckBox("ChkRememberMe", false)
+                            <label class="mx-2">Remember Me</label>
+                        </div>
+                        <div class="col-6 text-right">
+                            <a href="ForgotPassword">Forgot Password ?</a>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group text-center mb-0">
-                    <label>Dont't have an account? </label>
-                    <a href="SignUp">Sign Up</a>
-                </div>
-                <div class="form-group text-center">
-                    <label>To access demo account link</label>
-                    <a href="#">Click here</a>
-                </div>
-            </form>
+                    <div class="form-group">
+                        <div class="col-md-4 mx-auto">
+                            <input type="submit" value="Login" class="btn btn-primary btn-block" />
+                        </div>
+                    </div>
+                    <div class="form-group text-center mb-0">
+                        <label>Dont't have an account? </label>
+                        <a href="SignUp">Sign Up</a>
+                    </div>
+                    <div class="form-group text-center">
+                        <label>To access demo account link</label>
+                        <a href="#">Click here</a>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
