--- a/VoipApplicationProject/Views/Shared/_Layout.cshtml
+++ b/VoipApplicationProject/Views/Shared/_Layout.cshtml
@@ -104,9 +104,12 @@
             <h5 class="text-right text-white">&copy; 2020 Moitele.com. All Right Reserved</h5>
         </nav>
     </footer>
+
+    <script src="~/js/FileSaver.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/ExportTOExcel.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
