--- a/VoipApplicationProject/Views/Customer/ManageSubUser.cshtml
+++ b/VoipApplicationProject/Views/Customer/ManageSubUser.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "SubUser";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<input type="text" id="title" value="@ViewData["Title"]" hidden/>
 
 <h1>SubUser</h1>
 
@@ -136,7 +137,7 @@
     </div>
 </div>
 <div style="margin-left:70%">
-    <button type="submit" id="btn1" class="btn btn-primary ">EXPORT TO EXCEL</button>
+    <button type="submit" id="btn1" class="btn btn-primary" onclick="javascript: fnExcelReport('SubUserTable', 'data')">EXPORT TO EXCEL</button>
 </div>
 
 <div class="modal fade " id="AddAgent" tabindex="-1" role="dialog">
@@ -382,17 +383,7 @@
     </div>
 </div>
 
-
-
-
 <script>
     $('#SubUserTable').DataTable();
 </script>
-$(document).ready(function() {
-    $('#example').DataTable( {
-        dom: 'Bfrtip',
-        buttons: [
-            'copy', 'csv', 'excel', 'pdf', 'print'
-        ]
-    } );
-} );
+
