--- a/VoipApplicationProject/Views/Shared/FooterLayout.cshtml
+++ b/VoipApplicationProject/Views/Shared/FooterLayout.cshtml
@@ -11,7 +11,7 @@
     <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-
+    <script src="~/js/FileSaver.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @section Scripts {
@@ -66,6 +66,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/ExportTOExcel.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
